fix(layouts): remove the extra scroll on mobile devices
NextJs wrap the entire application inside a HTML Div tag and applies a
style on it. This division prevents the application layouts to take full
available height on the screen. Not overwriting it leads to apply
several workaround at every levels of element, layouts and pages. By
defining the NextJs app warpper as flex (with full height) you take back
conrtol of your app layouts. This commit fixes inevitable vertical
scroll on mobile devices.

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,3 +14,8 @@ a {
 * {
   box-sizing: border-box;
 }
+
+#__next {
+  display: flex;
+  height: 100%;
+}
